# CityMind-AMD

./: .env.example  .gitignore  .vercelignore  BUILD_LOG.md  LICENSE  MICRO_TASKS.md  README.md  build_static.sh  digital_twin.json  pyproject.toml  requirements.txt  vercel.json
citymind/: __init__.py  config.py  pipeline.py
citymind/agents/: __init__.py  orchestrator.py
citymind/digital_twin/: __init__.py  deviation_analysis.py  twin_engine.py
citymind/ingestion/: __init__.py  frame_extractor.py  metadata.py  quality_filter.py
citymind/perception/: __init__.py  defect_detection.py  depth_estimation.py  npu_inference.py  object_detection.py
citymind/rag/: __init__.py  ingest.py  retriever.py
citymind/reconstruction/: __init__.py  colmap_pipeline.py  point_cloud_utils.py  semantic_projection.py
citymind/visualization/: __init__.py  app.py  charts.py  report_pdf.py  viewer_3d.py
dashboard/: demo.html  index.html  index_final.html  platform.html  server.py
data/building_codes/: ACI_318_19_excerpts.txt  ASCE_7_22_excerpts.txt  IBC_2024_excerpts.txt
docs/: amd_tech_integration.md  architecture.md  setup_guide.md
models/: vaip_config.json
output/benchmarks/: benchmark_results.json
output/demo_rich/: agents.json  bridge_digital_twin.ply  defects.json  demo_data_complete.json  performance.json  (+4 more)
pitch/: PITCH_DECK_CONTENT.md  SUBMISSION_PORTAL_TEXT.md
scripts/: benchmark.py  generate_demo_data.py  generate_overlays.py  generate_smart_defects.py  process_drone_video.py  run_demo.py
tests/: test_pipeline.py
training/: export_onnx.py  quantize_vitis.py
(+4 files in other folders)
